<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">CulturAI</string>
    <string name="main_btn">Plan Your Turkey Trip</string>
    <string name="destinations">Destinations</string>
    <string name="see_all">See All</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="test_text">Hello, this is a test!</string>
    <string name="home">Home</string>
    <string name="planner">Planner</string>
    <string name="settings">Settings</string>
    <string name="all_turkey_destinations">All Turkey Destinations</string>
    <string name="season_text">In which season do you plan to visit Turkey?</string>
    <string name="summer_spring"><![CDATA[Summer & Spring]]></string>
    <string name="winter_autmn"><![CDATA[Winter & Autmn]]></string>
    <string name="beach_sea"><![CDATA[Beach & Sea]]></string>
    <string name="winter_skiing"><![CDATA[Winter & Skiing]]></string>
    <string name="nature_ecolife"><![CDATA[Nature & EcoLife]]></string>
    <string name="historical_cultural"><![CDATA[Historical & Cultural]]></string>
    <string name="outdoor_advanture"><![CDATA[Outdoor & Advanture]]></string>
    <string name="architecture_marvels">Architecture Marvels</string>
    <string name="taste_gastronomy"><![CDATA[Taste & Gastronomy]]></string>
    <string name="wellness_spa"><![CDATA[Wellness & Spa]]></string>
    <string name="select_your_favourite_holiday_types">Select your favourite holiday types</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="options">Options</string>
    <string name="sustainable_program">Sustainable Program</string>
    <string name="social_meadia">Social Meadia</string>
    <string name="info_dest">Choosing a city is very easy. The planner lists the most suitable cities for you and provides detailed information about each city. Select the most suitable city among the options and start preparing for your vacation.</string>
    <string name="info_planner">On the Planner page, select the season in which you want to vacation. Then, choose your vacation type. Vacation types include winter sports, summer vacation, beach vacation, historical tourism, and more. The planner will show you the most suitable cities based on your choices.</string>
    <string name="info_main">Here, you will find everything that you are looking for your Turkey vacation.You can get a full vacation plan for Turkey. In planner page select your favorite vacation type and get What you want!</string>
    <string name="planner_head">GoTürkiye Vacation Planner</string>
    <string name="main_head">Welcome to GoTürkiye!</string>
    <string name="dest_head">Turkey Destinations</string>
    <string name="day_one">Day One</string>
    <string name="day_two">Day Two</string>
    <string name="get_a_plan">Get a Plan</string>
    <string-array name="antalya">
        <item>Antalya</item>
        <item>Start the day with a rich, green and rich cheese variety. Because you can get a little tired. Let the first stop be Kaleiçi. Enter Kaleiçi through Hadrian\'s Gate and go along in the direction you entered, examining the narrow streets and original architecture of Kaleiçi. Next destination is Marina. Hop on a boat, grab a cool drink, and watch the cliffs. When the boat arrives at Aşağı Düden Waterfall, do not forget to take a photo. When the boat tour is over, it will be time for lunch. You can choose one of the cute restaurants in Kaleiçi.

The next stop after lunch can be Perge Ancient City. Perge is built on an exceptionally large area and hosts dozens of historical artifacts. So, it will take some time to enjoy Perge. And if the weather is hot, you will need to cool down afterwards. There are dozens of options to cool off in Antalya. One of them is Lara Beach, which is near Perge. Spend the afternoon on Lara\'s golden beaches, relieve your tiredness. You can choose a seafood restaurant for dinner. Because seafood restaurants in Antalya can offer you delicious Lagos Fish cooked in salt. Do not leave Antalya without tasting Lagos.</item>
        <item>Start the second day early. Because you can get on the cable car that goes to the top of Tahtalı Mountain in Kemer before sunrise and welcome the new day at the magnificent zenith of Tahtalı Mountain at an altitude of 2,365 meters. You can make sure that this experience will stay in your mind for life and accompany you as a souvenir. In other words, it will worth waking up incredibly early.  Once you reach sea level again, Olympos Ancient City will not be far away. There are cute venues where you can have a village breakfast on the ancient city road. You can evaluate them. Afterwards, enter the city and continue towards the sea by exploring the ancient city. If you get tired, a unique beach will be waiting for you at the end of your way.

For lunch, you can go to boutique restaurants in Çıralı, near Olympos. Each of them will offer you their own, delicious options. After that, you can go a little further towards west. The next destination is Kas, the quiet and charming district of Antalya. Of course, when you come to Kaş, you should join a boat tour. Pick a boat from the harbor, jump at it and try to find the bay where the turquoise sea is clearest. And do not forget to go to the northern shores of Kekova Island. Because, you will be fascinated by the ancient artifacts that can be seen with the naked eye, despite being a few meters below the sea. It is not possible to swim awfully close to Kekova Island to preserve that ancient richness, but you will see many calm bays. Choose one of them and cool off in the Mediterranean. When you return to the harbor, it will probably be time for dinner. In the charming streets of Kaş choose one of the boutique restaurants that plays your favorite music. Enjoy a calm evening in Kaş accompanied by beautiful music in a warm weather!</item>
    </string-array>
    <string-array name="adana">
        <item>Adana</item>
        <item>There are many historical and cultural sightseeing values in the center of Adana that can be visited. You can start your Adana tour with the TaşBridge, one of the oldest bridges still in use today, built by the Roman Architect “Auxentios” in the II. Century AD on the Seyhan River. The Girls’ High School, located right near the bridge, is also worth seeing. Afterwards, you can visit the Ulu Mosque and Ramazanoğlu Mansion, built in 1513 during the Ramazanoğlu Principality period. Later, you can see the historical Tepebağ Houses and photograph the architectural texture, and see the Bebekli Church, an Italian Catholic Church built in the name of St. Paul in 1881. Again, you can see the places around where the heart of the city beats by visiting the historical Great Clock Tower, Yağ Mosque and Kazancılar Bazaar. If you wish, you can have your meal in historical restaurants in this magical atmosphere accompanied by the famous Adana Kebab and Turnip juice, and then you can feast your palate with Adana’s famous desserts Karakuş and Halka Dessert or Bici Bici.

Again, in Adana center, Designed as Türkiye’s largest museum complex in New Adana Museum, you can follow the footsteps of history by visiting the Archeology and mosaic sections. In this historical and cultural trip of Adana if you want to breathe in the arms of green, Karaisali district about 50 km from Adana center is one of the most visited places in the region with its historical buildings and natural beauties. After a pleasant trekking in Kapıkaya Canyon, an ideal route for hiking enthusiasts and nature lovers, you can relax by sipping your coffee in front of the unique view of the historical Varda Bridge and take magnificent photos.
</item>
        <item>Apart from Adana center, many ancient cities, Castles, Bridges, Caravanserais and ruins can be seen. You can see the Misis Bridge, thought to have been built by the Eastern Roman Emperor Flavius Julius Constantinos in the 4th century, in the town of Misis, about 25 km from the center, and you can taste the famous Sıkma and Misis Ayran. Afterwards, you can enjoy the view by visiting the Yılan Castle, which welcomes you on the right side of the road while driving towards Ceyhan district. Afterwards, turning to Kadirli road from Ceyhan - Kadirli road junction and in Dilekkaya Village; You should see the magnificent Anavarza Ancient City, which is on the UNESCO World Heritage Temporary List. In Kozan Castle, located in Kozan district, you can relax by sipping your menengiç coffee with a magnificent view.

Later in the day passing through Ceyhan district, when you arrive in Yumurtalık district one of the most important port cities of the Region; You can also visit the Castle located in the harbor, Marco Polo Pier and the Sea Castle, Süleyman Tower in just west of the town and Kurtkulağı Caravanserai on the way to Ceyhan. Then about 45 km from the Center in Karataş district, having an important place in the Roman and Byzantine periods, Magarsus Ancient City and its Theater can be seen. Also located to the west of the district center and Çukurova’s largest Lagoon Akyatan Bird Paradise also attracts attention with its natural beauty. Both Yumurtalık and Karataş has a great potential in terms of sea tourism; since it is rich in fresh seafood, it offers unique tastes to its visitors.

If you can spare more time for Adana, we also recommend you see these unique places, we briefly mention below:

You can see every shade of green in the plateaus of Pozantı district, fill your lungs with oxygen, especially in autumn you can witness the riot of colors in Belemedik Plateau.

The plateaus, forests, wild animals in Aladağ National Park are among the regions where the natural life is best protected and therefore the most favorite areas of nature and camping enthusiasts. Recently, one of the most popular spots, especially in summer, is the Küp Waterfalls.

Located in Saimbeyli district Obruk Waterfall is one of the natural beauties of the region and attracts many visitors. You can see the s blue butterfly type specific to this region and if you come in season you should taste the famous Saimbeyli Cherry. Afterwards in Tufanbeyli district you can visit the Shar Ancient City, having the traces of Hittite, Roman and Byzantine periods.
</item>
    </string-array>
    <string-array name="adiyaman">
        <item>Adıyaman</item>
        <item>If you want to take a quick stroll in Adıyaman, head to Nemrut, near the city and 40 km north of Kahta, where the ancient statues of deities are located at an altitude of 2206 m. Visit the historical Oturakçı Bazaar, where you’ll find high quality handwoven rugs called Pişinik and Alikan in bright colours and miniature Nemrut sculptures at affordable prices. And taste the world-famous Çiğ Köfte, Kavurmalı Hıtap, Cevizli Sucuk, and lamb and Adıyaman Tut Mulberry and Mulberry Molasses in Şambayat.</item>

    </string-array>
</resources>