<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main.InformationActivity"
    android:background="@color/black"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <ImageView
            android:id="@+id/go_back_btn"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/go_back"
            app:tint="@color/main_green"
            tools:ignore="ContentDescription,HardcodedText" />

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/logo"
            android:paddingTop="0dp"
            android:layout_centerInParent="true"
            tools:ignore="ContentDescription"
            />

        <ImageView
            android:id="@+id/home_menu"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentRight="true"
            android:src="@drawable/home_bot_icon"
            app:tint="@color/main_green"
            tools:ignore="ContentDescription,HardcodedText" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_head"
                android:textColor="@color/white"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_main"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:paddingTop="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/planner_head"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:paddingTop="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_planner"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:paddingTop="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dest_head"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:paddingTop="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_dest"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:paddingTop="10dp"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>